# seabed

./: LICENSE.md  README.md  pyproject.toml
examples/: Noisy_linear_model.ipynb  adaptive_.ipynb  adaptive_Ramsey_example.ipynb  batch_Ramsey_example.ipynb  noisy_multiparameter_model.ipynb
src/seabed/: __init__.py  abstractbayesmodel.py  bayesianmodels.py  particlepdf.py  priors.py  samplers.py  utility_measures.py
